Fixed the warnings issues by the JVM emitted when Netty uses sun.misc.Unsafe